--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ p{
   width: 32.9%;
   height:88%;
   display: flex;
-  background:url("Images/undraw_programming_2svr.png");
+  background:url("Images/undraw.png");
   background-position:left;
   background-size:contain;
   background-repeat: no-repeat;
