--- a/index.html
+++ b/index.html
@@ -829,7 +829,8 @@ footer .social i
         </div>
           <div class="box">
             <div class="imgbox">
-              <a href="#"><img src="Images/xo.png" alt=""></a>
+              <a href="https://shyam7e.github.io/XO_GAME_JS/
+"><img src="Images/xo.png" alt=""></a>
             </div>
             <div class="info">
               <h2 class="tc">TicTacToe</h2><p> its a game known as tictactoe also known as X O created this with HTML CSS and JS</p>
@@ -837,7 +838,7 @@ footer .social i
           </div>
             <div class="box">
               <div class="imgbox">
-                <a href="#"><img src="Images/todolist.png" alt=""></a>
+                <a href="https://shyam7e.github.io/TodoApp/"><img src="Images/todolist.png" alt=""></a>
               </div>
               <div class="info">
                 <h2 class="td">TodoList</h2><p>its a Todo app where we can enter our todo's and all todo's gets listed we can add new todo's or remove completed todo's and we can also checklist them</p>
@@ -845,7 +846,7 @@ footer .social i
             </div>
               <div class="box">
                 <div class="imgbox">
-                  <a href="#"><img src="Images/cd.png" alt=""></a>
+                  <a href="https://shyam7e.github.io/covid_Tracker/"><img src="Images/cd.png" alt=""></a>
                 </div>
                 <div class="info">
                   <h2>Covid stats using Api</h2><p>its a Covid 19 Statistics Webpage which lists all States of India with no of stats using javascript fetch API</p>
