Updated project section links

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@ footer .social i
 
       <div class="box">
         <div class="imgbox">
-          <a href="https://github.com/shyam7e/websites_clone/tree/main/FB_clone"><img class="fbimg" src="Images/facebook.png" alt=""></a>
+          <a href="https://github.com/shyam7e/websites_clone/tree/main/FB_clone"b target="_blank"><img class="fbimg" src="Images/facebook.png" alt=""></a>
         </div>
         <div class="info">
           <h2 class="fb">Facebook login UI clone</h2>
@@ -845,7 +845,7 @@ footer .social i
       </div>
         <div class="box">
           <div class="imgbox">
-            <a href="https://github.com/shyam7e/websites_clone/tree/main/InstaClone"><img src="Images/instagram.jpg" class="instaimg" alt=""></a>
+            <a href="https://github.com/shyam7e/websites_clone/tree/main/InstaClone" target="_blank"><img src="Images/instagram.jpg" class="instaimg" alt=""></a>
           </div>
           <div class="info">
             <h2 class="insta"> Instagram login UI clone</h2><p>Created instagram UI clone with HTML CSS and JS</p>
@@ -853,7 +853,7 @@ footer .social i
         </div>
           <div class="box">
             <div class="imgbox">
-              <a href="#"><img src="Images/xo.png" alt=""></a>
+              <a href="https://shyam7e.github.io/XO_GAME_JS/" target="_blank"><img src="Images/xo.png" alt=""></a>
             </div>
             <div class="info">
               <h2 class="tc">TicTacToe</h2><p> its a game known as tictactoe also known as X O created this with HTML CSS and JS</p>
@@ -861,7 +861,7 @@ footer .social i
           </div>
             <div class="box">
               <div class="imgbox">
-                <a href="#"><img src="Images/todolist.png" alt=""></a>
+                <a href="https://shyam7e.github.io/TodoApp/" target="_blank"><img src="Images/todolist.png" alt=""></a>
               </div>
               <div class="info">
                 <h2 class="td">TodoList</h2><p>its a Todo app where we can enter our todo's and all todo's gets listed we can add new todo's or remove completed todo's and we can also checklist them</p>
@@ -869,7 +869,7 @@ footer .social i
             </div>
               <div class="box">
                 <div class="imgbox">
-                  <a href="#"><img src="Images/cd.png" alt=""></a>
+                  <a href="https://shyam7e.github.io/covid_Tracker/" target="_blank"><img src="Images/cd.png" alt=""></a>
                 </div>
                 <div class="info">
                   <h2>Covid stats using Api</h2><p>its a Covid 19 Statistics Webpage which lists all States of India with no of stats using javascript fetch API</p>
