--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       html
       {
         font-size: 62.5%;
+        scroll-behavior: smooth;
       }
       body {
         margin: 0;
@@ -414,13 +415,13 @@ p{
 .sbox
 {
   display:flex;
-  width: 50%;
+  width: 60%;
   height:70%;
   flex-flow: wrap;
  margin: auto;
  background-color: #fafafa;
  border: 1px solid #e5e5e5;
- justify-content: center; 
+ justify-content: space-evenly; 
  align-items: center;
  
 }
@@ -876,9 +877,10 @@ footer .social i
                   <a href="https://shyam7e.github.io/covid_Tracker/" target="_blank"><img src="Images/cd.png" alt=""></a>
                 </div>
                 <div class="info">
-                  <h2>Covid stats using Api</h2><p>its a Covid 19 Statistics Webpage which lists all States of India with no of stats using javascript fetch API</p>
+                  <h2 >Covid stats using Api</h2><p>its a Covid 19 Statistics Webpage which lists all States of India with no of stats using javascript fetch API</p>
                 </div>
               </div>
+              <div class="box"> <div class="imgbox"> <a href="https://ux-test-c5bfa.web.app/" target="_blank"><img src="Images/uxux.png" style="object-fit: cover;" alt=""></a> </div> <div class="info"> <h2 style="color:#134CA2">UX Design (REACT)</h2><p>UI/UX design page made with REACT JS </div> </div>
       </div>
 
 
@@ -909,6 +911,7 @@ footer .social i
         <div class="scontainer"><img class="skill" id="html" src="Images/html-5.svg"></img><p>HTML</p></div>
         <div class="scontainer"> <img class="skill" id="css" src="Images/css3.svg"></img><p>CSS</p></div>
         <div class="scontainer"><img class="skill" id="js" src="Images/javascript-4.svg"></img><p>JAVASCRIPT</p></div>
+        <div class="scontainer"><img class="skill" id="react" src="Images/react.png"></img><p>REACT JS</p></div>
         <div class="scontainer"><img class="skill" id="sass" src="Images/sass-1.svg"></img><p>SASS</p></div>
         <div class="scontainer"><img class="skill" id="java" src="Images/java-4.svg"></img><p>JAVA</p></div>
         <div class="scontainer"><img class="skill" id="cpp" src="Images/c-2975.svg"></img><p>C</p></div>
