--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ footer .social i
 
       <div class="box">
         <div class="imgbox">
-          <a href="https://play.google.com/store/apps/details?id=hummcare.app&hl=en&gl=US" target="_blank"><img class="imgclass" src="/Images/onboard.png" class="instaimg" alt=""></a>
+          <a href="https://play.google.com/store/apps/details?id=hummcare.app&hl=en&gl=US" target="_blank"><img class="imgclass" src="Images/onboard.png" class="instaimg" alt=""></a>
         </div>
         <div class="info">
           <h2 class="happ"> Hummcare App</h2><p>Hummcare iOS Android app built with React native live at Playstore and App store</p>
@@ -854,7 +854,7 @@ footer .social i
 
       <div class="box">
         <div class="imgbox">
-          <a href="https://firm.thewallruscompany.com/"b target="_blank"><img class="fbimg" src="/Images/Group 9.png" alt=""></a>
+          <a href="https://firm.thewallruscompany.com/"b target="_blank"><img class="fbimg" src="Images/Group 9.png" alt=""></a>
         </div>
         <div class="info">
           <h2 class="fb">Wallrus Admin Panel </h2>
